new query api added
